--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "strapi-provider-upload-aws-s3-cf-private",
-  "version": "3.6.4",
+  "name": "aws-s3-cf-private",
+  "version": "1.0.0",
   "description": "AWS S3 provider for strapi upload with cdn (cloudfront)",
   "directories": {
     "lib": "./lib"
